# fastapi-template

./: .sample.env  Dockerfile  Makefile  Procfile  README.md  docker-compose.debug.yml  docker-compose.yml  newrelic.ini  pyproject.toml  start.sh
.github/actions/dependency-mgmt/: action.yml
.github/actions/deploy-to-aptible/: action.yml
.github/workflow/: continuous-integration.yml  sentry.yml
.github/workflows/: continuous-integration.yml  dependency-mgmt.yml  deploy-to-aptible.yml  pr-formatting.yml  scaling-deploy.yml
.semaphore/: aptible-pentest-deploy.yml  aptible-production-deploy.yml  aptible-rnd-testing-deploy.yml  aptible-scaling-deploy.yml  semaphore.yml
app/: .coveragerc  alembic.ini  debug.sh  prestart.sh  run-tests.sh
app/alembic/: README.md  env.py  script.py.mako
app/alembic/versions/: 20210826_949357817cdc_adding_patients_table.py
app/app/: __init__.py  backend_pre_start.py  main.py
app/app/api/: deps.py
app/app/api/v0/: api.py
app/app/api/v0/endpoints/: example.py  patient.py
app/app/core/: config.py  controls.py  environment.py  exceptions.py  external_auth.py  handlers.py  middleware.py  security.py  version.py
app/app/core/health/: checks.py  route.py
app/app/core/logging/: __init__.py  config.py  filter.py  formatter.py  log.py
app/app/core/middleware/: http.py
app/app/core/monitoring/: __init__.py  datadog.py  new_relic.py  sentry.py  utils.py
app/app/crud/: __init__.py  base.py  crud_patient.py
app/app/db/: base_class.py  session.py
app/app/db/types/: phi_column.py
app/app/domain/: example_api.py
app/app/models/: patient.py
app/app/schemas/: __init__.py  patient.py  utils.py
app/app/schemas/enums/: types.py
app/app/tests/: conftest.py  utils.py
app/app/tests/end_to_end/: conftest.py  utils.py
app/app/tests/end_to_end/api/v0/: test_example.py
app/app/tests/integration/: conftest.py
app/app/tests/integration/api/: conftest.py
app/app/tests/integration/api/v0/: test_patient.py
app/app/tests/integration/core/: test_health_checks.py
app/app/tests/integration/crud/: test_patient.py
app/app/tests/integration/db/: test_types.py
app/app/tests/unit/: conftest.py  test_backend_pre_start.py  test_init.py
app/app/tests/unit/api/: conftest.py  test_version.py
app/app/tests/unit/api/v0/: test_example.py
app/app/tests/unit/core/: test_config.py  test_environment.py  test_external_auth.py  test_health_checks.py  test_health_routes.py  test_http_middleware.py  test_logging.py  test_middleware.py  test_monitoring.py  test_security.py
app/app/tests/unit/db/: test_types.py
app/app/tests/unit/domain/: test_example_api.py
app/app/tests/unit/resources/: sentry_exception__fastapi__with_phi.json  sentry_exception__httpx__with_phi.json  sentry_exception__sqlalchemy__with_phi.json  version.json
app/app/tests/unit/schemas/: test_utils.py
app/app/tests/unit/schemas/enums/: test_types.py
ci/: read_version.sh  test-local.sh  test.sh
ci/mocks/example-api/__files/: status_response.json
ci/mocks/example-api/mappings/: status_endpoint.json
