[tool.poetry]
name = "fastapi-template-service"
version = "0.1.0"
description = "FastAPI template service."
authors = ["<your-name-here>@hingehealth.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pip = "^21.1.1"
aioredis = "^1.3.1"
aenum = "^3.0.0"
alembic = "^1.5.8"
click = "^7.1.2"
fastapi = "0.65.2"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"
sentry-sdk = "^1.0.0"
slowapi = "^0.1.4"
tenacity = "^7.0.0"
httpx = "~0.17.1"
uvicorn = "^0.13.4"
freezegun = "^1.1.0"
Faker = "^8.1.2"
newrelic = "^6.2.0"
stringcase = "^1.2.0"
aio-pika = "^6.8.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^6.0b1"
deepdiff = "^5.5.0"
mock = "^4.0.3"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-dotenv = "^0.5.2"
pytest-httpx = "^0.11.0"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.5.1"
pytest-pycharm = "^0.7.0"
safety = "^1.10.3"
bandit = "^1.7.0"
hiro = "^0.5.1"
pytest-env = "^0.6.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --cov=app --cov-config=app/.coveragerc --cov-report=term-missing"
markers = [
    "end_to_end",
    "integration",
    "unit",
    "asyncio",
]
testpaths = [
    "app/app/tests/unit",
    "app/app/tests/integration",
    "app/app/tests/end_to_end",
]
env_files = ".sample.env"
env = [# This overrides the default values provided within the .sample.env file
    "ENVIRONMENT=test",
    "ENABLE_RATE_LIMITING=False"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
